Optimize Adjusts window border rounding and adds overflowconcealment

--- a/src/renderer/assets/base.css
+++ b/src/renderer/assets/base.css
@@ -33,8 +33,10 @@
 
   --color-heading: var(--vt-c-text-light-1);
   --color-text: var(--vt-c-text-light-1);
-
+  
   --section-gap: 160px;
+  --frame-border-radius: 8px;
+  --window-border-radius: 6px;
 }
 
 @media (prefers-color-scheme: dark) {
